--- a/.github/workflows/deno.yml
+++ b/.github/workflows/deno.yml
@@ -15,22 +15,18 @@ on:
     branches: [main]
 
 jobs:
-  test:
-    runs-on: ${{ matrix.os }} # runs a test on Ubuntu, Windows and macOS
-
+  build:
+    runs-on: ubuntu-16.04
     strategy:
       matrix:
-        deno: ["v1.x", "nightly"]
-        os: [macOS-latest, windows-latest, ubuntu-latest]
-
+        deno: ["v1.8.2", "v0.42.0", "v1.x", "v0.x", "nightly"]
+    name: Deno ${{ matrix.deno }} sample
     steps:
-      - name: Setup repo
-        uses: actions/checkout@v2
-
+      - uses: actions/checkout@v2
       - name: Setup Deno
-        uses: denolib/setup-deno@c7d7968ad4a59c159a777f79adddad6872ee8d96
+        uses: denolib/setup-deno@v2
         with:
-          deno-version: ${{ matrix.deno }} # tests across multiple Deno versions
-
-      - name: Run Tests
-        run: deno test --allow-net mod.test.js
+          deno-version: ${{ matrix.deno }}
+      - run: |
+          deno --version
+          deno run https://deno.land/std/examples/welcome.ts
